# xiii-godot

./: .gitignore  CMakeLists.txt  main.gd  main.gd.uid  main.tscn  project.godot  xiii_gdextension.gdextension  xiii_gdextension.gdextension.uid
src/: bsp_loader.cpp  bsp_loader.h  gdextension_entry.cpp  xiii.h
src/Math/: vec.h
src/Package/: NameString.cpp  NameString.h  ObjectFlags.h  ObjectSerializer.cpp  ObjectSerializer.h  Package.cpp  Package.h  PackageFlags.h  PackageManager.cpp  PackageManager.h  PackageStream.cpp  PackageStream.h  PackageTables.h
src/UObject/: BSPData.h  Level.cpp  Level.h  Model.cpp  Model.h  Texture.cpp  Texture.h  UClass.h  UObject.cpp  UObject.h
